--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,9 @@
+.git
+Dockerfile
+.DS_Store
+.gitignore
+.dockerignore
+
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,python,linux
 
