Enable endpoint caching using Redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,13 @@ services:
     environment:
       - FLASK_APP=iso_service
       - SECRET_KEY=dev
+      - CACHE_TYPE=redis
+      - CACHE_REDIS_HOST=redis
+      - CACHE_REDIS_PORT=6379
+      - CACHE_REDIS_DB=0
+      - CACHE_REDIS_URL=redis://redis:6379/0
+      - CACHE_DEFAULT_TIMEOUT=500
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
