--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,17 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9.1
@@ -34,3 +45,9 @@ jobs:
       env:
         FLASK_APP: iso_service
         SECRET_KEY: dev
+        CACHE_TYPE: redis
+        CACHE_REDIS_HOST: redis
+        CACHE_REDIS_PORT: 6379
+        CACHE_REDIS_DB: 0
+        CACHE_REDIS_URL: redis://redis:6379/0
+        CACHE_DEFAULT_TIMEOUT: 500
